Had to refactor code to avoid unwanted margins
@extend was extending other classes in different partials that were
adding unnecessary and unwanted margin. refactored to only include rules
were needed.

--- a/wpsc-components/theme-engine-v2/theming/assets/css/wpsc-responsive.css
+++ b/wpsc-components/theme-engine-v2/theming/assets/css/wpsc-responsive.css
@@ -22,7 +22,7 @@ Variables
   .wpsc-grid #wpsc-products {
     margin-left: -2.5%;
     font-size: 0; }
-  .wpsc-grid .wpsc-product, .wpsc-grid .wpsc-product-summary, .wpsc-grid .wpsc-product-header {
+  .wpsc-grid .wpsc-product {
     display: inline-block;
     margin: 0 0 7% 2.5%;
     font-size: initial;
@@ -44,7 +44,7 @@ Variables
     width: 17.5%; }
   .wpsc-grid .wpsc-column-6 {
     width: 14.166%; }
-  .wpsc-grid .wpsc-product, .wpsc-grid .wpsc-product-summary, .wpsc-grid .wpsc-product-header {
+  .wpsc-grid .wpsc-product {
     font-size: 16px;
     text-align: center; }
   .wpsc-grid .wpsc-column-2 .wpsc-product-title {
@@ -73,7 +73,9 @@ Variables
     -moz-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap; }
-  .wpsc-grid .wpsc-product, .wpsc-grid .wpsc-product-summary, .wpsc-grid .wpsc-product-header {
+  .wpsc-grid .wpsc-product,
+  .wpsc-grid .wpsc-product-summary,
+  .wpsc-grid .wpsc-product-header {
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
@@ -83,17 +85,15 @@ Variables
     -moz-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column; }
-  .wpsc-grid .wpsc-product-summary {
-    -webkit-justify-content: space-between;
-    -moz-justify-content: space-between;
-    -ms-justify-content: space-between;
-    justify-content: space-between;
-    height: 100%; }
+  .wpsc-grid .wpsc-product-summary,
   .wpsc-grid .wpsc-product-header {
     -webkit-justify-content: space-between;
     -moz-justify-content: space-between;
     -ms-justify-content: space-between;
-    justify-content: space-between;
+    justify-content: space-between; }
+  .wpsc-grid .wpsc-product-summary {
+    height: 100%; }
+  .wpsc-grid .wpsc-product-header {
     -webkit-box-flex: 1 0 auto;
     -moz-box-flex: 1 0 auto;
     -webkit-flex: 1 0 auto;
